# GSIP

./: .gitignore  LICENSE  MANIFEST.in  README.md  analyze_benchmarks.py  batch_config.json  benchmark_config.json  documentation.md  pipeline.py  pyproject.toml  style.css  temp_all_benchmarks.json  temp_bench_prithvi.json  thesis.html
configs/model/: convnext_s2.yaml  prithvi_crop.yaml  prithvi_flood_segmentation.yaml  prithvi_segmentation.yaml  resnet_all.yaml  resnet_s2.yaml
configs/pipeline/: inference_params.yaml
docs/: API_REFERENCE.md  DEVELOPMENT.md  EXTENDING.md  PROJECT_STRUCTURE.md  TECHNICAL_REFERENCE.md  USAGE.md
gtk_client/: main.py
gtk_client/core/: config_io.py  plotter.py  runner.py
gtk_client/ui/: main_window.py
gtk_client/ui/pages/: analysis.py  batch_run.py  benchmarks.py  configs.py  inference.py
gtk_client/ui/widgets/: file_picker.py  legend_widget.py  log_viewer.py  map_viewer.py  native_bar_chart.py  native_chart.py  plot_widget.py
latex_thesis/: main.aux  main.bcf  main.fdb_latexmk  main.fls  main.lot  main.out  main.tex  main.toc  references.bib
latex_thesis/chapters/: 01_introduction.aux  01_introduction.tex  02_theoretical_background.aux  02_theoretical_background.tex  03_methodology.aux  03_methodology.tex  04_algorithmic_solution.aux  04_algorithmic_solution.tex  05_evaluation.aux  05_evaluation.tex  06_discussion.aux  06_discussion.tex  07_conclusion.aux  07_conclusion.tex
src/: benchmark_suite.py  cli.py  main.py  manage.py  requirements.txt  run_suite.py
src/ben_v2/: fusion.py  memory_utils.py  process.py
src/ben_v2/adapters/: base.py  bigearthnet_adapter.py  prithvi_adapter.py
src/eo_core/: benchmarker.py  data.py  generate_viewer.py  inference_engine.py  memory_utils.py  process.py  utils.py
src/eo_core/adapters/: bigearthnet_adapter.py  prithvi_adapter.py  wrappers.py
src/eo_core/reporters/: aggregated.py  base.py  geotiff.py  metadata.py  preview.py  probability.py
