[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "geospatial-inference-pipeline"
version = "0.1.0"
description = "A scalable, multi-modal deep learning pipeline for robust and efficient inference on gigapixel-scale Earth Observation (EO) data, focusing on tasks like land cover classification and segmentation."
authors = [{name = "Your Name", email = "you@example.com"}]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "torch",
    "rasterio",
    "tqdm",
    "lightning",
    "huggingface_hub",
    "matplotlib",
    "Pillow",
    "scipy",
    "configilm",
    "hydra-core",
    "ray",
    "omegaconf",
    "transformers",
    "lmdb",
    "psutil",
    "pandas",
    "safetensors",
    "timm",
]

[project.urls]
"Homepage" = "https://github.com/rvardiashvili/GeoTiff-Scalable-Analysis-Pipeline"

[tool.setuptools.packages.find]
where = ["src"]
